[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/themes/menus.tres" type="Theme" id=1]
[ext_resource path="res://scripts/menus/GameOverMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/images/player/charlesidle1.png" type="Texture" id=3]
[ext_resource path="res://scenes/Camera2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/music/game over/game_over_theme.wav" type="AudioStream" id=5]
[ext_resource path="res://scripts/menus/GameOverScreenPrimary.gd" type="Script" id=6]
[ext_resource path="res://assets/images/misc/heart_shatter.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/menus/heart_shatter.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/menus/bighurt.wav" type="AudioStream" id=9]
[ext_resource path="res://scripts/ui/scoregameover.gd" type="Script" id=10]
[ext_resource path="res://assets/fonts/custom_font_medium.tres" type="DynamicFont" id=11]
[ext_resource path="res://scripts/ui/WavesSurvived.gd" type="Script" id=12]
[ext_resource path="res://assets/fonts/custom_font.tres" type="DynamicFont" id=13]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true) {
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/active = true

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HeartShatter:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("heart_shatter:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("big_hurt:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Control:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/fade_out:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CanvasLayer/fade_out:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CanvasLayer/fade_out:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/fade_out:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/fade_out:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/fade_out:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "introduce_menu"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "on_ready"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("HeartShatter:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("heart_shatter:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("big_hurt:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/fade_out:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "play_music"
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="GameOver" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4500.0
margin_top = -4500.0
margin_right = 4500.0
margin_bottom = 4500.0
rect_min_size = Vector2( 9000, 9000 )
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 7 )
position = Vector2( 0.00535417, 0.0237797 )
scale = Vector2( 1.65165, 1.65165 )
texture = ExtResource( 3 )

[node name="Camera2D" parent="Sprite" instance=ExtResource( 4 )]

[node name="HeartShatter" type="Sprite" parent="."]
position = Vector2( 0.0106301, 0.00576949 )
scale = Vector2( 0.261059, 0.261059 )
texture = ExtResource( 7 )
hframes = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -509.168
margin_top = -302.36
margin_right = -509.168
margin_bottom = -302.36
rect_scale = Vector2( 2, 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
margin_left = 340.0
margin_top = 217.0
margin_right = 684.0
margin_bottom = 383.0

[node name="Label" type="Label" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
margin_right = 344.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 11 )
text = "Game Over"
align = 1
valign = 1

[node name="Control" type="Control" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 344.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 20 )

[node name="Waves" type="Label" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 344.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 13 )
text = "Score"
script = ExtResource( 12 )

[node name="Control3" type="Control" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 344.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 20 )

[node name="Score" type="Label" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 344.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 13 )
text = "Score"
script = ExtResource( 10 )

[node name="Control2" type="Control" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 344.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 344.0
margin_bottom = 166.0
alignment = 1

[node name="PlayBtn" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 170.0
margin_bottom = 26.0
rect_min_size = Vector2( 170, 0 )
text = "Play Again"

[node name="QuitBtn" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 174.0
margin_right = 344.0
margin_bottom = 26.0
rect_min_size = Vector2( 170, 0 )
text = "Quit"

[node name="fade_out" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4500.0
margin_top = -4500.0
margin_right = 4500.0
margin_bottom = 4500.0
rect_min_size = Vector2( 9000, 9000 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "menu music"

[node name="CutsceneController" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/fade_out = SubResource( 12 )
anims/introduce_menu = SubResource( 11 )
anims/on_ready = SubResource( 10 )
anims/play_music = SubResource( 9 )

[node name="heart_shatter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "menu sfx"

[node name="big_hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -6.198
bus = "menu sfx"

[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer/PlayBtn" to="CanvasLayer/Control" method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer/QuitBtn" to="CanvasLayer/Control" method="_on_QuitBtn_pressed"]
[connection signal="animation_finished" from="CutsceneController" to="." method="_on_CutsceneController_animation_finished"]
